almost ready for gitpod

--- a/Pipfile
+++ b/Pipfile
@@ -12,5 +12,6 @@ django-heroku = "*"
 gunicorn = "*"
 django-cors-headers = "*"
 djangorestframework = "*"
+django-generate-secret-key = "*"
 
 [dev-packages]
