--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-heroku = "*"
 gunicorn = "*"
 django-cors-headers = "*"
 djangorestframework = "*"
-django-generate-secret-key = "*"
 
 [dev-packages]
+
+[scripts]
