--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,4 +4,4 @@ tasks:
     - command: >
         export IP=0.0.0.0 &&
         export PORT=3000 &&
-        python welcome.py
+        python3 welcome.py
