--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,10 @@ name = "pypi"
 python_version = "3.6"
 
 [packages]
-
+"psycopg2-binary" = "*"
+django-heroku = "*"
+gunicorn = "*"
+django-cors-headers = "*"
+djangorestframework = "*"
 
 [dev-packages]
-
-[scripts]
