--- a/Pipfile
+++ b/Pipfile
@@ -7,13 +7,12 @@ name = "pypi"
 python_version = "3.6"
 
 [packages]
-"psycopg2-binary" = "*"
+psycopg2-binary = "*"
 django-heroku = "*"
 gunicorn = "*"
 django-cors-headers = "*"
 djangorestframework = "*"
-django-extensions = "*"
-# pygraphviz = "*"
+pygraphviz = "*"
 
 [dev-packages]
 
