--- a/Pipfile
+++ b/Pipfile
@@ -13,9 +13,12 @@ gunicorn = "*"
 django-cors-headers = "*"
 djangorestframework = "*"
 pygraphviz = "*"
+django-extensions = "*"
+django-rest-swagger = "*"
 
 [dev-packages]
 
 [scripts]
 migrate= "python manage.py migrate"
 start= "python manage.py runserver $IP:$PORT"
+diagram= "python manage.py graph_models api -o diagram.png"
