--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,8 +4,8 @@ ports:
     - port: 3000
       onOpen: open-preview
 tasks:
-    - init: pipenv install
-      command: >
+    - init: >
+        pipenv install;
         pipenv run migrate;
         pipenv run start;
     - command: python3 welcome.py
