--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7.4"
 
 [packages]
 psycopg2-binary = "*"
@@ -14,7 +14,8 @@ django-cors-headers = "*"
 djangorestframework = "*"
 pygraphviz = "*"
 django-extensions = "*"
-django-rest-swagger = "*"
+djangorestframework-jwt = "*"
+twilio = "*"
 
 [dev-packages]
 
