--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ image:
   file: .gitpod.dockerfile
 ports:
     - port: 3000
-      onOpen: open-browser
+      onOpen: open-preview
 tasks:
     - init: >
         pipenv install;
