--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [requires]
-python_version = "3.7.4"
+python_version = "3.6"
 
 [packages]
 psycopg2-binary = "*"
@@ -14,8 +14,7 @@ django-cors-headers = "*"
 djangorestframework = "*"
 pygraphviz = "*"
 django-extensions = "*"
-djangorestframework-jwt = "*"
-twilio = "*"
+django-rest-swagger = "*"
 
 [dev-packages]
 
